2005-08-12  Kaz Kojima  <kkojima@gcc.gnu.org>

	* gcc.c (LINK_SSP_SPEC): Remove space before a trailing }.
	(LINK_COMMAND_SPEC): Add space after %(link_ssp).

2005-08-11  James E. Wilson  <wilson@specifix.com>

	* config/ia64/ia64.h (EXTRA_MEMORY_CONSTRAINT): New.

2005-08-11  Jakub Jelinek  <jakub@redhat.com>

	* dwarf2out.c (add_location_or_const_value_attribute): Prefer
	locations gathered by var-tracking in single entry loc_list
	over loc_descriptor_from_tree.

	* dwarf2out.c (concat_loc_descriptor): Add can_use_fbreg argument,
	pass it down to loc_descriptor.
	(loc_descriptor): Pass can_use_fbreg to concat_loc_descriptor.
	(containing_function_has_frame_base): Move earlier in the file.
	(loc_descriptor_from_tree_1): Use containing_function_has_frame_base
	instead of always assuming fbreg can't be used.

2005-08-11  David Edelsohn  <edelsohn@gnu.org>

	* config/rs6000/altivec.md: Change constraint "m" to "Z".
	* config/rs6000/predicates.md (indexed_or_indirect_operand):
	Accept address wrapped in AND for Altivec.
	* config/rs6000/rs6000.c (rs6000_legitimize_reload_address):
	Strip AND wrapping offset address for Altivec.

2005-08-11  Richard Henderson  <rth@redhat.com>

	PR middle-end/23312
	* gimplify.c (gimplify_one_sizepos): Check for INTEGER_TYPE
	before using TYPE_IS_SIZETYPE.

2005-08-11  Richard Henderson  <rth@redhat.com>

	PR target/22225
	* config/alpha/alpha.c (alphaev4_insn_pipe): Add take pipes for
	insn types not present on ev4.
	(alphaev5_insn_pipe): Similarly.

2005-08-11  Richard Earnshaw  <richard.earnshaw@arm.com>

	PR target/23250
	* arm.c (arm_override_options): If the user has selected callee-super-
	interworking, then enable normal interworking.

2005-08-11  Rainer Orth  <ro@TechFak.Uni-Bielefeld.DE>

	* config/i386/x86-64.h (ASM_OUTPUT_ALIGNED_BSS): Undef before
	redefinition.

2005-08-11  Wu Zhou  <woodzltc@cn.ibm.com>

	* doc/rtl.texi: Fix two typos.

2005-08-11  Richard Guenther  <rguenther@suse.de>

	PR target/23289